tests/errors/other/test_tc_other_03_while_cond_type.pc
#import std.io;
int main() {
    while 42 {
        io.println("loop");
    }
    return 0;
}
